# dataset-qa-pipeline

./: Dockerfile  LICENSE  README.md  bones_real_nb.csv  pyproject.toml  run_bones_demo.bat  run_bones_demo.sh
examples/bones/non_broken/: nb_1.json
examples/bones_real/broken_bone/: mura_000000.json  mura_000001.json  mura_000002.json  mura_000003.json  mura_000004.json  mura_000006.json  mura_000007.json  mura_000008.json  mura_000009.json  mura_000010.json  mura_000011.json  mura_000012.json  mura_000014.json  mura_000016.json  mura_000017.json  mura_000018.json  mura_000023.json  mura_000024.json  mura_000025.json  mura_000026.json  mura_000027.json  mura_000028.json  mura_000030.json  mura_000031.json  mura_000032.json  mura_000033.json  mura_000034.json  mura_000036.json  mura_000038.json  mura_000039.json  mura_000041.json  mura_000042.json  mura_000043.json  mura_000045.json  mura_000046.json  mura_000047.json  mura_000048.json  mura_000049.json  mura_000050.json  mura_000051.json  (+5 more)
examples/bones_real/non_broken/: mura_000019.json  mura_000021.json  mura_000022.json
examples/demo/: sample_1.json  sample_2.json
notebooks/: bones_baseline.ipynb
src/datasetqa/: export.py  fetch_bones.py  prepare.py  review.py  utils.py
src/datasetqa.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_utils.py
